--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -93,7 +93,7 @@
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">Products <span class="text-muted">It'll blow your mind.</span></h2>
-              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+              <p class="lead"> Coming soon!!!</p>
             </div>
             <div class="col-md-5">
               <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -104,7 +104,7 @@
   
           <div class="row featurette">
 
-            <div class="col-md-7 order-md-2">
+            <div class="col-md-8">
               <h2 class="featurette-heading">Contact Us<span class="text-muted">See for yourself.</span></h2>
               <div class="row">
                   <div class="col s4">
@@ -136,25 +136,14 @@
                   </div>
               </div>
       </div>
-            <div class="col-md-5 order-md-1">
+            <div class="col-md-4">
                 <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5605.068234975808!2d3.3839911281535153!3d6.599387899694815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bed7ab6ef9c09%3A0x5eb98675d6a5e5cd!2sIkorodu+Rd!5e0!3m2!1sen!2sng!4v1509623522180" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
   
           <hr class="featurette-divider">
   
-          <div class="row featurette">
-            <div class="col-md-7">
-              <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-            </div>
-            <div class="col-md-5">
-              <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-            </div>
-          </div>
-  
-          <hr class="featurette-divider">
-  
+           
           <!-- /END THE FEATURETTES -->
   
         </div><!-- /.container -->
