--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,14 +58,14 @@
         ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
         <br/>
-        <div class="container marketing">
+        <div class="container-fluid">
   
           <!-- Three columns of text below the carousel -->
           <div class="row"> <br/><br/><br/>
             <div class="col-lg-6">
             
               <h2>About Us</h2>
-              <p>We have extensive experience and broad knowledge in issues relating to both technology 
+              <p style="font-size:1.2em">We have extensive experience and broad knowledge in issues relating to both technology 
                 acquisition and transmission of 
                 data from vehicles, as well as their interpretation and target analysis.
                   We based the architecture of solutions, on the experience based on a group of 
@@ -78,9 +78,9 @@
                     
                   </div><!-- /.col-lg-4 -->
 
-                  <div class="col-lg-6 right" >  <br/> <br/>
+                  <div class="col-lg-6 right" >  <br/> <br/><br/>
                       <img src="../../assets/images/About-Us.jpg" alt="About us" width="80%" height="50%">
-                  </div><br/> <br/>
+                  </div><br/> <br/><br/>
                   <br/><br/><br/>
 
           </div><!-- /.row -->
@@ -90,22 +90,22 @@
   
           <hr class="featurette-divider">
   
-          <div class="row featurette">
+          <div class="row featurette jumbotron"> <br/><br/><br/><br/>
             <div class="col-md-7">
-              <h2 class="featurette-heading">Products <span class="text-muted">It'll blow your mind.</span></h2>
+              <h2 class="featurette-heading">Products <span class="text-muted"></span></h2>
               <p class="lead"> Coming soon!!!</p>
             </div>
             <div class="col-md-5">
-              <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-            </div>
+              <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="GPS Tracking....">
+            </div><br/><br/><br/><br/>
           </div>
   
           <hr class="featurette-divider">
   
-          <div class="row featurette">
+          <div class="row">
 
-            <div class="col-md-8">
-              <h2 class="featurette-heading">Contact Us<span class="text-muted">See for yourself.</span></h2>
+            <div class="col s8">
+              <h2 class="featurette-heading">Contact Us<span class="text-muted"></span></h2>
               <div class="row">
                   <div class="col s4">
                     <i class="Large material-icons">store</i>
@@ -136,8 +136,8 @@
                   </div>
               </div>
       </div>
-            <div class="col-md-4">
-                <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5605.068234975808!2d3.3839911281535153!3d6.599387899694815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bed7ab6ef9c09%3A0x5eb98675d6a5e5cd!2sIkorodu+Rd!5e0!3m2!1sen!2sng!4v1509623522180" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <div class="col s4">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5605.068234975808!2d3.3839911281535153!3d6.599387899694815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bed7ab6ef9c09%3A0x5eb98675d6a5e5cd!2sIkorodu+Rd!5e0!3m2!1sen!2sng!4v1509623522180" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
   
