--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,20 +20,21 @@
           <a class="nav-link" [routerLink]="['/']" fragment="contact">contact us &nbsp;&nbsp;&nbsp;</a>
         </li>
       </ul>
-      <a class="float-right" style ="text-decoration: none;  color: hotpink; font-size:1.2em;" href="http://174.142.39.183/webgps" target="_blank">Login to your account</a>
+      <a class="float-right" style ="text-decoration: none;  color: hotpink; font-size:1.2em;" href="http://174.142.39.183/webgps" target="_blank"> <i class="fa fa-user fa-1x" aria-hidden="true"></i> &nbsp; Login</a>
     </div>  
   
   </div>
   </nav>
 
 </header>
-<div class="container">
+<div class="container" style="background-color:#FFF5EE;">
 <router-outlet>
 </router-outlet>
 
 </div>
-<footer class="container">
-  <p class="float-right"><a href="#">Back to top</a></p>
+<footer class="container" style="background-color:black; color:white">
+    <p class="float-right"><a href="#" style="color:white">Back to top</a></p>
   <p>
             © 2017 Henrit Track All rights reserved</p>
+           
 </footer>
