--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,9 +12,9 @@
               <div class="container">
                 <div class="carousel-caption text-left">
                   <h1>Our platform</h1>
-                  <p>in multiple applications, from SVRS to UBI and 
+                  <p style="font-size:1.2em;">in multiple applications, from SVRS to UBI and 
                     beyond, as it contains a wide set of features.</p>
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                 
                 </div>
               </div>
             </div>
@@ -23,9 +23,9 @@
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Support</h1>
-                  <p>We support a wide range of GPS tracking 
+                  <p style="font-size:1.2em;">We support a wide range of GPS tracking 
                     devices from many manufacturers </p>
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                 
                 </div>
               </div>
             </div>
@@ -34,11 +34,11 @@
               <div class="container">
                 <div class="carousel-caption text-right">
                   <h1>Why Henrit?</h1>
-                  <p>Place your own brand on the Henrit GPS platform 
+                  <p style="font-size:1.2em;">Place your own brand on the Henrit GPS platform 
                     and take advantage of our know-how, 
                     constant development and professional 
                     support.</p>
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                 
                 </div>
               </div>
             </div>
@@ -57,15 +57,16 @@
         <!-- Marketing messaging and featurettes
         ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
-        <br/>
+        <br/> <br/>
         <div class="container-fluid">
   
           <!-- Three columns of text below the carousel -->
-          <div class="row"> <br/><br/><br/>
-            <div class="col-lg-6">
+          <div class="row" > <br/><br/><br/>
+            <div class="col-lg-6" id="about">
             
               <h2>About Us</h2>
-              <p style="font-size:1.2em">We have extensive experience and broad knowledge in issues relating to both technology 
+              <p style="font-size:1.2em" >
+                We have extensive experience and broad knowledge in issues relating to both technology 
                 acquisition and transmission of 
                 data from vehicles, as well as their interpretation and target analysis.
                   We based the architecture of solutions, on the experience based on a group of 
@@ -73,7 +74,7 @@
                   Among other things, that’s why our engineers, are a  unique world of people who understand 
                   the needs of developers and users having different services, resources, 
                   who wish to integrate on the basis of modern hardware and software.</p> <br/>
-                    <p>
+                    <p >
                  <!--     <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>  --> </p>
                     
                   </div><!-- /.col-lg-4 -->
@@ -82,7 +83,7 @@
                       <img src="../../assets/images/About-Us.jpg" alt="About us" width="80%" height="50%">
                   </div><br/> <br/><br/>
                   <br/><br/><br/>
-
+                  <br/><br/>
           </div><!-- /.row -->
   
   
@@ -90,12 +91,12 @@
   
           <hr class="featurette-divider">
   
-          <div class="row featurette jumbotron"> <br/><br/><br/><br/>
+          <div class="row featurette"> <br/><br/><br/><br/>
             <div class="col-md-7">
-              <h2 class="featurette-heading">Products <span class="text-muted"></span></h2>
-              <p class="lead"> Coming soon!!!</p>
+              <h2>Products <span class="text-muted"></span></h2>
+              <p class="lead"> Coming soon!!!</p> <br/><br/><br/>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5" id="product">
               <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="GPS Tracking....">
             </div><br/><br/><br/><br/>
           </div>
@@ -105,10 +106,12 @@
           <div class="row">
 
             <div class="col s8">
-              <h2 class="featurette-heading">Contact Us<span class="text-muted"></span></h2>
+              <h2>Contact Us<span class="text-muted"></span></h2>
               <div class="row">
-                  <div class="col s4">
-                    <i class="Large material-icons">store</i>
+                 
+                  <div class="col s4 text-right">
+                      <br/>
+                    <i class="fa fa-address-book fa-2x" aria-hidden="true">&nbsp;:</i>
                   </div>
                   <div class="col s8">
                     <br/>
@@ -118,19 +121,28 @@
                   </div>
                   </div>
                   <div class="row">
-                  <div class="col s4">
-                    <i class=" Large material-icons">call</i>
+                      <div class="col s4 text-right">
+                          
+                          <br/>
+                      <i class="fa fa-mobile fa-3x" aria-hidden="true">&nbsp;:</i>
                   </div>
                   <div class="col s8">
                     <br/>
+                    <br/>
                       07036583661
+                      <br/>
                   </div>
                </div>
                   <div class="row" id="contact" >
-                  <div class="col s4">
-                    <i class="Large material-icons">email</i>
+                      <div class="col s4 text-right">
+                          
+                    <br/>
+                    <br/>
+                      <i class="fa fa-envelope-o fa-2x" aria-hidden="true">&nbsp;:</i>
                   </div>
-                  <div class="col s8">
+                  <div class="col s8 align-left">
+                    <br/>
+                    <br/>
                     <br/>
                      henrit09@gmail.com
                   </div>
